# rocket-server

./: .gitignore  Cargo.toml  audio-tag.py  deps.json  deps.txt  msg.md  nginx.conf
routes/: auth.sass  common.sass  error.html.hbs  fs.html.hbs  index.html.hbs  index.md  style.sass
routes/games/: style.sass
routes/games/celeste/: ReAdMe.md  info.json
routes/osts/: style.sass
routes/osts/albums/minecraft-volume-alpha/: Haggstrom.opus  info.json
src/: file_browser.rs  helpers.rs  main.rs  sass.rs
src/archives/: games.rs  mod.rs  osts.rs
src/auth/: db.rs  helpers.rs  mod.rs
src/components/: authenticate.rs  games.rs  mod.rs  osts.rs
src/tests/: auth.rs
