[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.6.0"
once_cell = "1.17.0"
rocket = { version = "0.5.0-rc.2",  features = ["secrets"] } # "tls"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = "1.0.152"
serde_json = "1.0.91"

yew = { version = "0.20.0", features = ["ssr", "hydration"] }

argon2 = { version = "0.4", features = ["alloc"] }
password-hash = { version = "0.4.2", features = ["alloc"] }
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"
async-std = "1.12.0"
thiserror = "1.0.38"
markdown = "1.0.0-alpha.6"
chrono = "0.4.23"
